testsuite/tests/typecheck/should_fail/tcfail220.stderr
[1 of 1] Compiling ShouldFail[sig of Prelude] ( tcfail220.hsig, nothing )

tcfail220.hsig:4:1: error:
    Type constructor ‘Maybe’ has conflicting definitions in the module
    and its hsig file
    Main module: data Maybe a = Nothing | Just a
    Hsig file:  type role Maybe phantom phantom
                data Maybe a b = Nothing
    The types have different kinds
